--- a/i18n/zh_CN.yaml
+++ b/i18n/zh_CN.yaml
@@ -1086,6 +1086,7 @@ ui:
     search_placeholder: 通过标签名称过滤
     no_desc: 此标签无描述。
     more: 更多
+    wiki: 维基
   ask:
     title: 新增问题
     edit_title: 编辑问题
