--- a/i18n/zh_CN.yaml
+++ b/i18n/zh_CN.yaml
@@ -1722,6 +1722,8 @@ ui:
       welcome: 欢迎来到管理后台！
       site_statistics: 站点统计
       questions: "问题:"
+      resolved: "已解决:"
+      unanswered: "未回复:"
       answers: "回答:"
       comments: "评论:"
       votes: "投票:"
