--- a/i18n/pt_PT.yaml
+++ b/i18n/pt_PT.yaml
@@ -326,7 +326,7 @@ backend:
       name:
         other: rude ou abusivo
       desc:
-        other: "A reasonable person would find this content inappropriate for respectful discourse."
+        other: "Uma pessoa razoável consideraria esse conteúdo inapropriado para um discurso respeitoso."
     a_duplicate:
       name:
         other: uma duplicação
@@ -338,7 +338,7 @@ backend:
       name:
         other: não é uma resposta
       desc:
-        other: "This was posted as an answer, but it does not attempt to answer the question. It should possibly be an edit, a comment, another question,or deleted altogether."
+        other: "Foi apresentada como resposta, mas não tenta responder à pergunta. Talvez deva ser uma edição, um comentário, outra pergunta ou totalmente apagada."
     no_longer_needed:
       name:
         other: não é mais necessário
@@ -397,7 +397,7 @@ backend:
         name:
           other: precisa de detalhes ou clareza
         desc:
-          other: This question currently includes multiple questions in one. It should focus on one problem only.
+          other: Esta pergunta atualmente inclui várias perguntas em uma. Deve se concentrar em apenas um problema.
       other:
         name:
           other: algo mais
@@ -464,32 +464,32 @@ backend:
       title:
         other: "[{{.SiteName}}] Confirme seu novo endereço de e-mail"
       body:
-        other: "Confirme seu novo endereço de e-mail para o {{.SiteName}} clicando no seguinte link:<br>\n<a href='{{.ChangeEmailUrl}}' target='_blank'>{{.ChangeEmailUrl}}</a><br><br>\n\nSe você não solicitou esta alteração, por favor, ignore este e-mail.\n"
+        other: "Confirm your new email address for {{.SiteName}} by clicking on the following link:<br>\n<a href='{{.ChangeEmailUrl}}' target='_blank'>{{.ChangeEmailUrl}}</a><br><br>\n\nIf you did not request this change, please ignore this email.<br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen."
     new_answer:
       title:
         other: "[{{.SiteName}}] {{.DisplayName}} respondeu à sua pergunta"
       body:
-        other: "<a href='{{.AnswerUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>{{.AnswerSummary}}</blockquote><br>\n<a href='{{.AnswerUrl}}'>Visualizado em {{.SiteName}}</a><br><br>\n\n--<br>\n<small><a href='{{.UnsubscribeUrl}}'>Cancelar inscrição</a></small>"
+        other: "<a href='{{.AnswerUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>{{.AnswerSummary}}</blockquote><br>\n<a href='{{.AnswerUrl}}'>View it on {{.SiteName}}</a><br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen.<br><br>\n\n<small><a href='{{.UnsubscribeUrl}}'>Unsubscribe</a></small>"
     invited_you_to_answer:
       title:
         other: "[{{.SiteName}}] {{.DisplayName}} convidou-lhe para responder"
       body:
-        other: "<a href='{{.InviteUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>I ach que sei a resposta.</blockquote><br>\n<a href='{{.InviteUrl}}'>Visualiza em {{.SiteName}}</a><br><br>\n\n--<br>\n<small><a href='{{.UnsubscribeUrl}}'>Cancelar inscrição</a></small>"
+        other: "<a href='{{.InviteUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>I think you may know the answer.</blockquote><br>\n<a href='{{.InviteUrl}}'>View it on {{.SiteName}}</a><br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen.<br><br>\n\n<small><a href='{{.UnsubscribeUrl}}'>Unsubscribe</a></small>"
     new_comment:
       title:
         other: "[{{.SiteName}}] {{.DisplayName}} comentou em sua publicação"
       body:
-        other: "<a href='{{.CommentUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>{{.CommentSummary}}</blockquote><br>\n<a href='{{.CommentUrl}}'>Visualizar no {{.SiteName}}</a><br><br>\n\n--<br>\n<small><a href='{{.UnsubscribeUrl}}'>Cancelar inscrição</a></small>"
+        other: "<a href='{{.CommentUrl}}'>{{.QuestionTitle}}</a><br><br>\n\n{{.DisplayName}}:<br>\n<blockquote>{{.CommentSummary}}</blockquote><br>\n<a href='{{.CommentUrl}}'>View it on {{.SiteName}}</a><br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen.<br><br>\n\n<small><a href='{{.UnsubscribeUrl}}'>Unsubscribe</a></small>"
     new_question:
       title:
         other: "[{{.SiteName}}] Nova pergunta: {{.QuestionTitle}}"
       body:
-        other: "<a href='{{.QuestionUrl}}'>{{.QuestionTitle}}</a><br>\n<small>{{.Tags}}</small><br><br>\n\n--<br>\n<small><a href='{{.UnsubscribeUrl}}'>Cancelar inscrição</a></small>"
+        other: "<a href='{{.QuestionUrl}}'>{{.QuestionTitle}}</a><br>\n<small>{{.Tags}}</small><br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen.<br><br>\n\n<a href='{{.UnsubscribeUrl}}'>Unsubscribe</a></small>"
     pass_reset:
       title:
         other: "[{{.SiteName }}] Redefinição de senha"
       body:
-        other: "Alguém pediu para redefinir a sua senha em {{.SiteName}}.<br><br>\n\nSe não foi você, você pode ignorar este e-mail.<br><br>\n\nClique no seguinte link para escolher uma nova senha:<br>\n<a href='{{.PassResetUrl}}' target='_blank'>{{.PassResetUrl}}</a>\n"
+        other: "Somebody asked to reset your password on {{.SiteName}}.<br><br>\n\nIf it was not you, you can safely ignore this email.<br><br>\n\nClick the following link to choose a new password:<br>\n<a href='{{.PassResetUrl}}' target='_blank'>{{.PassResetUrl}}</a>\n<br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen."
     register:
       title:
         other: "[{{.SiteName}}] Confirme seu novo endereço de e-mail"
@@ -499,7 +499,7 @@ backend:
       title:
         other: "[{{.SiteName}}] E-mail de teste"
       body:
-        other: "Esse é um email de teste."
+        other: "This is a test email.\n<br><br>\n\n--<br>\nNote: This is an automatic system email, please do not reply to this message as your response will not be seen."
   action_activity_type:
     upvote:
       other: voto positivo
@@ -787,7 +787,7 @@ ui:
   how_to_format:
     title: Como formatar
     desc: >-
-      <ul class="mb-0"><li><p class="mb-2">link question or answer: <code>#10010000000000001</code></p></li> <li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
+      <ul class="mb-0"><li><p class="mb-2">mention a post: <code>#post_id</code></p></li> <li><p class="mb-2">to make links</p><pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p class="mb-2">put returns between paragraphs</p></li><li><p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by placing <code>&gt;</code> at start of line</p></li><li><p class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p class="mb-2">create code fences with backticks <code>`</code></p><pre class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
   pagination:
     prev: Anterior
     next: Próximo
@@ -904,7 +904,7 @@ ui:
             msg:
               empty: Arquivo não pode ser vazio.
               only_image: Somente um arquivo de imagem é permitido.
-              max_size: O tamanho do arquivo não pode exceder 4 MB.
+              max_size: File size cannot exceed {{size}} MB.
           desc:
             label: Descrição (opcional)
       tab_url: URL da imagem
@@ -946,6 +946,10 @@ ui:
       text: Tabela
       heading: heading
       cell: Célula
+    file:
+      text: Attach files
+      not_supported: "Don’t support that file type. Try again with {{file_type}}."
+      max_size: "Attach files size cannot exceed {{size}} MB."
   close_modal:
     title: Estou fechando este post como...
     btn_cancel: Cancelar
@@ -1086,6 +1090,7 @@ ui:
     search_placeholder: Filtrar por nome de marcador
     no_desc: O marcador não possui descrição.
     more: Mais
+    wiki: Wiki
   ask:
     title: Adicionar Pergunta
     edit_title: Editar Pergunta
@@ -1146,7 +1151,7 @@ ui:
       placeholder: Procurar
   footer:
     build_on: >-
-      .
+      Powered by <1> Apache Answer </1>- the open-source software that powers Q&A communities.<br />Made with love © {{cc}}.
   upload_img:
     name: Mudar
     loading: carregando...
@@ -1335,9 +1340,9 @@ ui:
     title: Perguntas relacionadas
     answers: respostas
   linked_question:
-    title: Linked Questions
-    description: Questions linked to
-    no_linked_question: No questions linked from this question.
+    title: Perguntas relacionadas
+    description: Questões ligadas a
+    no_linked_question: Nenhuma pergunta relacionada a esta questão.
   invite_to_answer:
     title: Pessoas Perguntaram
     desc: Select people who you think might know the answer.
@@ -1522,6 +1527,7 @@ ui:
     newest: Mais recente
     active: Ativo
     hot: Popular
+    frequent: Frequent
     recommend: Recomendado
     score: Pontuação
     unanswered: Não Respondido
@@ -1556,7 +1562,7 @@ ui:
     top_questions: Melhores Perguntas
     stats: Estatísticas
     list_empty: Postagens não encontradas.<br />Talvez você queira selecionar uma guia diferente?
-    content_empty: No posts found.
+    content_empty: Nenhum post encontrado.
     accepted: Aceito
     answered: respondido
     asked: perguntado
@@ -1615,7 +1621,7 @@ ui:
       msg:
         empty: Site URL não pode ser vazio.
         incorrect: URL do site está incorreto.
-        max_length: A URL do site deve ter no máximo 512 caracteres.
+        max_length: O nome do site deve ter no máximo 512 caracteres.
     contact_email:
       label: E-mail par contato
       text: O endereço de e-mail do contato principal deste site.
@@ -1721,6 +1727,8 @@ ui:
       welcome: Bem-vindo ao Admin!
       site_statistics: Estatísticas do site
       questions: "Perguntas:"
+      resolved: "Resolved:"
+      unanswered: "Unanswered:"
       answers: "Respostas:"
       comments: "Comentários:"
       votes: "Votos:"
@@ -1747,7 +1755,7 @@ ui:
       github: GitHub
       blog: Blog
       contact: Contato
-      forum: Forum
+      forum: Fórum
       documents: Documentos
       feedback: Opinião
       support: Supporte
@@ -1814,7 +1822,7 @@ ui:
             msg: "Por favor insira o e-mail do usuário, um por linha."
           display_name:
             label: Nome de exibição
-            msg: O nome de exibição deve ter de 2 a 30 caracteres.
+            msg: O nome de exibição deve ter de 2-30 caracteres.
           email:
             label: E-mail
             msg: E-mail inválido.
@@ -2008,6 +2016,21 @@ ui:
       reserved_tags:
         label: Reserved Marcadores
         text: "Tags reservadas só podem ser usadas pelo moderador."
+      image_size:
+        label: Max image size (MB)
+        text: "The maximum image upload size."
+      attachment_size:
+        label: Max attachment size (MB)
+        text: "The maximum attachment files upload size."
+      image_megapixels:
+        label: Max image megapixels
+        text: "Maximum number of megapixels allowed for an image."
+      image_extensions:
+        label: Authorized image extensions
+        text: "A list of file extensions allowed for image display, separate with commas."
+      attachment_extensions:
+        label: Authorized attachment extensions
+        text: "A list of file extensions allowed for upload, separate with commas. WARNING: Allowing uploads may cause security issues."
     seo:
       page_title: SEO
       permalink:
@@ -2211,6 +2234,7 @@ ui:
     discard_confirm: Tem certeza que deseja descartar o rascunho?
   messages:
     post_deleted: Esta publicação foi removida.
+    post_cancel_deleted: This post has been undeleted.
     post_pin: Esta publicação foi fixada.
     post_unpin: Esta postagem foi desafixada.
     post_hide_list: Esta postagem foi ocultada da lista.
@@ -2219,3 +2243,15 @@ ui:
     post_list: Esta postagem foi listada.
     post_unlist: Esta publicação foi removida da lista.
     post_pending: A sua postagem está aguardando revisão. Ela ficará visível depois que for aprovada.
+    post_closed: This post has been closed.
+    answer_deleted: This answer has been deleted.
+    answer_cancel_deleted: This answer has been undeleted.
+    change_user_role: This user's role has been changed.
+    user_inactive: This user is already inactive.
+    user_normal: This user is already normal.
+    user_suspended: This user has been suspended.
+    user_deleted: This user has been deleted.
+    badge_activated: This badge has been activated.
+    badge_inactivated: This badge has been inactivated.
+
+
