fix: add preivew model to question list page

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1500,6 +1500,9 @@ ui:
     deleted: Deleted
     pending: Pending
     more: More
+    view: View
+    card: Card
+    compact: Compact
   search:
     title: Search Results
     keywords: Keywords
